--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.6",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
     "expo-splash-screen": "~0.30.8",
@@ -50,6 +51,7 @@
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.5",
+    "react-native-event-listeners": "^1.0.7",
     "react-test-renderer": "^19.0.0",
     "ts-jest": "^29.3.4",
     "typescript": "~5.8.3"
