--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,15 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "jsx": "react-native",
+    "target": "esnext",
+    "moduleResolution": "node",
+    "allowJs": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "types": ["jest", "node"]
   },
   "include": [
     "**/*.ts",
@@ -14,15 +22,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ],
-  "compilerOptions": {
-    "jsx": "react-native",
-    "target": "esnext",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "noEmit": true
-  },
   "exclude": ["node_modules", "babel.config.js", "jest.config.js"]
 }
